# Feishu-CLI-Web

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/routes/: auth.py  chat.py  lark_setup.py  models.py  scenarios.py  scheduled_tasks.py  templates.py
backend/app/core/: execution_records.py  lark_workflow_templates.py  local_sessions.py  model_config.py  scenario_templates.py  scheduled_tasks.py  storage.py  template_generator.py  template_store.py
backend/app/skills/: __init__.py  base.py
backend/app/skills/lark_cli/: __init__.py  plan_preview.py  profiles.py  skill.py  skill_runtime.py
backend/app/skills/lark_cli/skills/lark-reliable-scenes/: SKILL.md
backend/app/skills/lark_cli/skills/lark-reliable-scenes/references/: stable-task-recipes.md
backend/app/skills/lark_cli/skills/lark-shared/references/: natural-language-recipes.md
backend/app/skills/lark_cli/skills/lark-workflow-templates/: SKILL.md
backend/data/: manage_users.py  users_delete.json  users_upsert.json
doc/: TECH_SHARE_15MIN.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: styles.css
frontend/src/components/: Chat.vue  Login.vue  TemplateCommunity.vue  WelcomeView.vue
frontend/src/lib/: auth.ts
frontend/src/router/: index.ts
